Creating site for 0.0.80

--- a/changelog.html
+++ b/changelog.html
@@ -150,7 +150,7 @@
                   <li id="publishDate">Last Published: 2015-08-05
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 0.0.78
+                  <li id="projectVersion">Version: 0.0.80
                       </li>
                       
                 
@@ -315,20 +315,28 @@
 <p>Total number of changed sets: 1</p>
 <div class="section">
 <h3><a name="Changes_between_2015-07-06_and_2015-08-06"></a>Changes between 2015-07-06 and 2015-08-06</h3>
-<p>Total commits: 56<br />Total number of files changed: 32</p>
+<p>Total commits: 58<br />Total number of files changed: 32</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Timestamp</th>
 <th>Author</th>
 <th>Details</th></tr>
 <tr class="b">
+<td>2015-08-05 23:18:52</td>
+<td>neilellis &lt;hello@neilellis.me&gt;</td>
+<td><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml">src/site/<b>site.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml?rev=01f6e03d23522470bb1197a1e185c46aeb8645a8&amp;content-type=text/vnd.viewcvs-markup">v 01f6e03d23522470bb1197a1e185c46aeb8645a8</a><br /><br />Reports</td></tr>
+<tr class="a">
 <td>2015-08-05 23:08:22</td>
 <td>neilellis &lt;hello@neilellis.me&gt;</td>
 <td><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/pom.xml"><b>pom.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/pom.xml?rev=3cffcbe9645f1f42b630774268ace80007d8dbde&amp;content-type=text/vnd.viewcvs-markup">v 3cffcbe9645f1f42b630774268ace80007d8dbde</a><br /><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml">src/site/<b>site.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml?rev=3cffcbe9645f1f42b630774268ace80007d8dbde&amp;content-type=text/vnd.viewcvs-markup">v 3cffcbe9645f1f42b630774268ace80007d8dbde</a><br /><br />Reports</td></tr>
-<tr class="a">
+<tr class="b">
 <td>2015-08-05 22:22:49</td>
 <td>neilellis &lt;hello@neilellis.me&gt;</td>
 <td><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/pom.xml"><b>pom.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/pom.xml?rev=7723a4ca3a221c46fef572ab2fa8ceda99c78845&amp;content-type=text/vnd.viewcvs-markup">v 7723a4ca3a221c46fef572ab2fa8ceda99c78845</a><br /><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml">src/site/<b>site.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml?rev=7723a4ca3a221c46fef572ab2fa8ceda99c78845&amp;content-type=text/vnd.viewcvs-markup">v 7723a4ca3a221c46fef572ab2fa8ceda99c78845</a><br /><br />Reflow</td></tr>
+<tr class="a">
+<td>2015-08-05 22:20:35</td>
+<td>Neil Ellis &lt;hello@neilellis.me&gt;</td>
+<td><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/.release"><b>.release</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/.release?rev=2813c7e83437aebf4d61971fbc4564762ad35b7d&amp;content-type=text/vnd.viewcvs-markup">v 2813c7e83437aebf4d61971fbc4564762ad35b7d</a><br /><br />Promotion from staging of 0.0.80</td></tr>
 <tr class="b">
 <td>2015-08-05 22:12:48</td>
 <td>neilellis &lt;hello@neilellis.me&gt;</td>
