--- a/changelog.html
+++ b/changelog.html
@@ -150,7 +150,7 @@
                   <li id="publishDate">Last Published: 2015-08-05
                       <span class="divider">|</span>
                    </li>
-                  <li id="projectVersion">Version: 0.0.80
+                  <li id="projectVersion">Version: 0.0.84
                       </li>
                       
                 
@@ -315,20 +315,28 @@
 <p>Total number of changed sets: 1</p>
 <div class="section">
 <h3><a name="Changes_between_2015-07-06_and_2015-08-06"></a>Changes between 2015-07-06 and 2015-08-06</h3>
-<p>Total commits: 58<br />Total number of files changed: 32</p>
+<p>Total commits: 60<br />Total number of files changed: 32</p>
 <table border="0" class="table table-striped">
 <tr class="a">
 <th>Timestamp</th>
 <th>Author</th>
 <th>Details</th></tr>
 <tr class="b">
+<td>2015-08-05 23:35:13</td>
+<td>neilellis &lt;hello@neilellis.me&gt;</td>
+<td><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/README.md"><b>README.md</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/README.md?rev=75228871881e1b8c55b05e1c93e59041df1aed07&amp;content-type=text/vnd.viewcvs-markup">v 75228871881e1b8c55b05e1c93e59041df1aed07</a><br /><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/pom.xml"><b>pom.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/pom.xml?rev=75228871881e1b8c55b05e1c93e59041df1aed07&amp;content-type=text/vnd.viewcvs-markup">v 75228871881e1b8c55b05e1c93e59041df1aed07</a><br /><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml">src/site/<b>site.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml?rev=75228871881e1b8c55b05e1c93e59041df1aed07&amp;content-type=text/vnd.viewcvs-markup">v 75228871881e1b8c55b05e1c93e59041df1aed07</a><br /><br />Reports</td></tr>
+<tr class="a">
 <td>2015-08-05 23:18:52</td>
 <td>neilellis &lt;hello@neilellis.me&gt;</td>
 <td><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml">src/site/<b>site.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml?rev=01f6e03d23522470bb1197a1e185c46aeb8645a8&amp;content-type=text/vnd.viewcvs-markup">v 01f6e03d23522470bb1197a1e185c46aeb8645a8</a><br /><br />Reports</td></tr>
-<tr class="a">
+<tr class="b">
 <td>2015-08-05 23:08:22</td>
 <td>neilellis &lt;hello@neilellis.me&gt;</td>
 <td><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/pom.xml"><b>pom.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/pom.xml?rev=3cffcbe9645f1f42b630774268ace80007d8dbde&amp;content-type=text/vnd.viewcvs-markup">v 3cffcbe9645f1f42b630774268ace80007d8dbde</a><br /><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml">src/site/<b>site.xml</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/src/site/site.xml?rev=3cffcbe9645f1f42b630774268ace80007d8dbde&amp;content-type=text/vnd.viewcvs-markup">v 3cffcbe9645f1f42b630774268ace80007d8dbde</a><br /><br />Reports</td></tr>
+<tr class="a">
+<td>2015-08-05 22:37:00</td>
+<td>Neil Ellis &lt;hello@neilellis.me&gt;</td>
+<td><a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/.release"><b>.release</b></a> <a class="externalLink" href="https://github.com/sillelien/tutum-api/blob/master/.release?rev=5e97c6108a368e2808218f352cfb9f8b31378bff&amp;content-type=text/vnd.viewcvs-markup">v 5e97c6108a368e2808218f352cfb9f8b31378bff</a><br /><br />Promotion from staging of 0.0.84</td></tr>
 <tr class="b">
 <td>2015-08-05 22:22:49</td>
 <td>neilellis &lt;hello@neilellis.me&gt;</td>
